syntax = "proto3";

package education.code.luis;

option go_package = "luisfp/plataforma-desafio/framework/pb";

message UserRequest{
    string name = 1;
    string email = 2;
    string password = 3;
}

message UserResponse{
    string token = 1;
}

service UserService{
    rpc CreateUser (UserRequest) returns (UserResponse){};
}